Added CompressedLayout.IsHeadless to Grid

--- a/StatisticsCalculator/StatisticsCalculator/Views/DefaultCalculatorView.xaml
+++ b/StatisticsCalculator/StatisticsCalculator/Views/DefaultCalculatorView.xaml
@@ -9,7 +9,8 @@
              x:Class="StatisticsCalculator.Views.DefaultCalculatorView">
   <ContentView.Content>
         <Grid HorizontalOptions="CenterAndExpand"
-              VerticalOptions="End">
+              VerticalOptions="End"
+              CompressedLayout.IsHeadless="True">
             <Grid.RowDefinitions>
                 <RowDefinition Height="70"/>
                 <RowDefinition Height="70"/>
