Add grow 1 and horizontal text alignment center to value label

--- a/StatisticsCalculator/StatisticsCalculator/Views/SampleItemView.xaml
+++ b/StatisticsCalculator/StatisticsCalculator/Views/SampleItemView.xaml
@@ -14,6 +14,8 @@
                 <Label Text="{Binding ItemValue}" 
                        TextColor="Black" 
                        FontSize="18"
+                       FlexLayout.Grow="1"
+                       HorizontalTextAlignment="Center"
                        BackgroundColor="Transparent"/>
             </FlexLayout>
         </Frame>
